# txt_to_XLSX

./: CMakeLists.txt  README.md  main.cpp
output/: CMakeCache.txt  Makefile  cmake_install.cmake  sheet.xlsx
output/OpenXLSX/: Makefile  cmake_install.cmake
output/OpenXLSX/OpenXLSX/: OpenXLSXConfigVersion.cmake  OpenXLSXTargets.cmake
output/files/: 2.txt  3.txt
output/output/: proj  sheet.xlsx
